<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:paddingLeft="0px"
    android:paddingTop="0px"
    android:paddingRight="0px"
    android:weightSum="1">

    <SurfaceView
        android:id="@+id/decoder_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/nav_button_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/background_dark"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <!--        <FrameLayout-->
        <!--            android:id="@+id/back_button"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:background="@drawable/btn_selector">-->

        <!--           -->

        <!--        </FrameLayout>-->
        <!--        <Button-->
        <!--            style="?android:attr/buttonBarButtonStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_weight="1"-->
        <!--            android:text="@string/back_button"-->
        <!--            android:background="@drawable/btn_selector"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColor="@android:color/white"-->
        <!--            android:textSize="20sp" />-->

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/home_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/home_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


        <Button
            android:id="@+id/appswitch_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/appswitch_button"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


    </LinearLayout>

</LinearLayout>
