<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D2228"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        android:background="#3C93F0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:text="Scrcpy For Android"
            android:textColor="@color/white" />

    </FrameLayout>


    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#1D2228"

            android:orientation="vertical"
            tools:context=".MainActivity">

            <org.client.scrcpy.MarkdownView
                android:id="@+id/tips_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="#323540"
                android:padding="10dp"
                android:text="@string/connect_tips"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="#323540"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/label_server_ip"
                    android:textAppearance="@android:style/TextAppearance"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_background"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_server_host"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:minHeight="50dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="#A8AAB5"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                    <FrameLayout
                        android:id="@+id/history_list"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:background="@drawable/btn_selector">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:src="@drawable/down" />
                    </FrameLayout>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#323540"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_video_resolution"
                    android:textAppearance="@android:style/TextAppearance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_video_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/options_resolution_values"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#323540"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_video_bitrate"
                    android:textAppearance="@android:style/TextAppearance"
                    android:textColor="@color/white" />

                <Spinner
                    android:id="@+id/spinner_video_bitrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:entries="@array/options_bitrate_keys"
                    android:minHeight="48dp"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Switch
                android:id="@+id/switch0"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#323540"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/switch0"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#323540"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/switch1"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector"
                android:text="@string/action_start"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
